good/src/main/java/com/example/sample/domain/model/PlayerStart.java
package com.example.sample.domain.model;

public class PlayerStart {
  private final Location location;

  public PlayerStart(final Location location) {
    this.location = location;
  }
}
