bad/src/main/java/com/example/sample/entity/Location.java
package com.example.sample.entity;

public class Location {
  public int worldX;
  public int worldY;
}
